--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+<artifactId>gson</artifactId>
+<packaging>jar</packaging>
+<version>2.2.2</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
