--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+	    <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>2.1.1</version>
+        </dependency>		
 	</dependencies>
 	<profiles>
 		<profile>
