--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,12 @@
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
            <version>2.1.1</version>
-        </dependency>		
+        </dependency>
+        <dependency>
+  <groupId>com.restfb</groupId>
+  <artifactId>restfb</artifactId>
+  <version>1.6.11</version>
+</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
